--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
        <div class="pr_container clear">
            <div class="pr_profile">
                <div>
-                   <img src="http://placehold.it/250X350" alt="사진">
+                   <img src="img10/250.jpg" alt="사진">
                </div>
                <ul>
                    <li>김대현 / Kim DaeHyun</li>
                    <li><i class="fas fa-user"></i>영상관련 직종(지원직종)</li>
-                   <li><i class="fas fa-calendar-minus"></i>1995. 03. 03(만27세)</li>
+                   <li><i class="fas fa-calendar-minus"></i>1994. 03. 03(만28세)</li>
                    <li><i class="fas fa-map-marker-alt"></i>서울 창신동 거주</li>
                </ul>
            </div>
@@ -157,12 +157,12 @@
                <div class="pr_box cer_box">
                   <h3 class="pr_title cet_title">LICENSE</h3>
                   <div class="pr_date cet_date">
-                      <div>2006.10</div>
-                      <div>2017.03</div>
+                      <div>2006.10.06</div>
+                      <div>2017.03.06</div>
                   </div>
                   <div class="pr_txt cer_txt">
-                      <div>자격증</div>
-                      <div>자격증</div>
+                           <div>자격증</div>
+                           <div>자격증</div>
                   </div>
                </div>
                <div class="ct_box">
@@ -199,7 +199,7 @@
           <!--첫번째 영상 -->
           <div class="slide" style="left:0">
               <div class="image">
-                  <img src="img10/0.jpg" alt="영상사진">
+                  <img src="img10/개햝는짤.jpg" alt="영상사진">
               </div> 
               <div class="pf_txt_container">
                   <h3 class="pf_title">영상제목1</h3>
@@ -222,7 +222,7 @@
                       </tr>
                   </table>
                   <div class="pf_gosite">
-                     <a href="https://www.youtube.com/embed/Ro0xBh1XPok" class="portfolio_btn">▶ PLAY</a>
+                     <a href="img10/%EC%9E%A1%EC%A7%80%EB%AA%A8%EC%85%98.mp4" class="portfolio_btn">▶ PLAY</a>
                   </div>
               </div>
           </div>
